@@ -1,0 +1,7 @@
+int
+main(void)
+{
+    int[4] a;
+    a;
+    return 0;
+}
