@@ -1,3 +1,10 @@
+Tue Sep 16 03:42:43 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/TypeChecker.java: reject statements
+	  whose type is struct/union/allocated array.
+
+	* test: test invalid statement expression.
+
 Tue Sep 16 03:23:49 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/asm: toString -> toSource.
